--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "My-project-main.sln"
+    "dotnet.defaultSolution": "GYARB-FPS.sln"
 }
